regis n login done

--- a/home.html
+++ b/home.html
@@ -14,8 +14,8 @@
             <p class="w">Western</p>
         </div>
         <div class="links">
-            <a href="">What we offer</a>
-            <a href="">About Us</a>
+            <a href="" class="o">What we offer</a>
+            <a href="" class="o">About Us</a>
             <a href="login.html" class="us">Login</a>
         </div>
     </nav>
