--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOGIN</title>
     <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <div class="container">
@@ -17,10 +18,13 @@
                 <label for="name">Username</label>
                 <input type="text" placeholder="Enter your username here" id="name">
                 <div id="validation"></div>
-                <label for="password">Password</label>
-                <input type="password" placeholder="Enter your password" id="password">
-                <div id="validation2"></div>
-
+                    <label for="password">Password</label>
+                    <input type="password" placeholder="Enter your password" id="password" >
+                    <button id="view" onclick="show()">
+                        <i class="fa-solid fa-eye" id="eye"></i>
+                    </button>
+                    <div id="validation2"></div>
+                    
                 <div class="rem">
                     <input type="checkbox" id="rememberme">
                     <label for="rememberme">Remember me</label>
@@ -32,4 +36,5 @@
         </form>
     </div>
 </body>
+<script src="script2.js"></script>
 </html>
