--- a/register.html
+++ b/register.html
@@ -7,47 +7,60 @@
     , initial-scale=1.0">
     <title>Register</title>
     <link rel="stylesheet" href="style3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <div class="container">
-        <form action="">
+        <form action="#" id="form1">
             <h2>Register</h2>
             <div class="content">
                 <div class="name">
-                    <div class="first">
+                    <div class="first" >
                         <label for="first">First Name</label>
                         <input type="text" placeholder="Enter your first name" id="first">
-                        <div id="validation"></div>
+                        <div id="validation" class="val"></div>
+                        <div id="validation2" class="val"></div>
                     </div>
                     <div class="last">
                         <label for="last">Last Name</label>
                         <input type="text" placeholder="Enter your last name" id="last">
-                        <div id="validation2"></div>
+                        <div id="validation3" class="val"></div>
+                        <div id="validation4" class="val"></div>
                     </div>
                 </div>
                 <div class="use">
                     <div class="user">
                         <label for="username">Username</label>
-                        <input type="text" placeholder="Enter your username" id="username">
-                        <div id="validation3"></div>
+                        <input type="text" placeholder="Enter your username" id="username" class="username">
+                        <div id="validation5" class="val"></div>
                     </div>
                     <div class="date">
                         <label for="date">Date</label>
-                        <input type="date">
-                        <div id="validation4"></div>
+                        <input type="date" id="date">
+                        <div id="validation6" class="val"></div>
                     </div>
                 </div>
                 <div class="pass">
                     <label for="pass">Password</label>
-                    <input type="password" placeholder="Enter your password">
-                    <div id="validation5"></div>
+                    <input type="password" placeholder="Enter your password" id="password">
+                    <button id="view" onclick="show()">
+                        <i class="fa-solid fa-eye" id="eye"></i>
+                    </button>
+                    <div id="validation7" class="val"></div>
+                    <div id="validation8" class="val"></div>
+                    <div id="validation9" class="val"></div>
                 </div>
                 <div class="conf">
                     <label for="conf">Confirm Password</label>
-                    <input type="password" placeholder="Confirm your password">
-                    <div id="validation6"></div>
+                    <input type="password" placeholder="Confirm your password" id="confirmpass">
+                    <button id="view" onclick="show2()">
+                        <i class="fa-solid fa-eye" id="eye"></i>
+                    </button>
+                    <div id="validation10" class="val"></div>
+                    <div id="validation11" class="val"></div>
                 </div>
-                <input type="submit" value="Confirm" class="submit">
+                <input type="submit" value="Confirm" class="submit" id="submit">
+                
             </div>
         </form>
     </div>
